<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.airtickets.AirticketsFragment">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="94dp"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:textSize="22sp"
            android:text="@string/title_search"
            android:textColor="@color/gray_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/bg_rectangle_radius_16dp"
            android:backgroundTint="@color/gray_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/bg_rectangle_radius_16dp"
                android:backgroundTint="@color/gray_4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="33dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/ic_search_24dp"
                    android:backgroundTint="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                    android:id="@+id/image_search_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="45dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_separator"
                    android:backgroundTint="@color/gray_5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <EditText
                    android:id="@+id/action_place_departure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="49dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/action_place_departure"
                    android:textColorHint="@color/text_hint"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/image_search_separator"/>

            <TextView
                    android:id="@+id/action_place_arrival"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="53dp"
                    android:layout_marginStart="49dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/action_place_arrival"
                    android:textColorHint="@color/text_hint"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/image_search_separator"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="305dp"
            android:textSize="22sp"
            android:text="@string/header_offers"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_offers"
            android:layout_width="match_parent"
            android:layout_height="213.16dp"
            android:layout_marginTop="350dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:itemCount="5"/>

</androidx.constraintlayout.widget.ConstraintLayout>